--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -2,6 +2,9 @@
 <html lagn="ko" xmlns:th="http://www.thymeleaf.org">
 
 <head>
+	 <!-- google -->
+    <meta name="google-site-verification" content="EKiW_Lm3Qw-DYnLT9qokEpZT2Sa8tSQuVWhVEvs4kPk" />
+
 	 <th:block th:replace="thymeleaf/header :: headerFragment"></th:block>  
 	<!-- <th:block th:replace="templates/thymeleaf/headerFragment :: headerFragment" ></th:block> -->
 	<style>
