--- a/src/main/resources/templates/thymeleaf/footer.html
+++ b/src/main/resources/templates/thymeleaf/footer.html
@@ -45,7 +45,7 @@
 					<div class="footer-text">상호 : MANSION9  대표 : 이영선  사업자등록번호 : 473-81-01206 <a href="javascript:void(0);" onclick="window.open('http://www.ftc.go.kr/bizCommPop.do?wrkr_no=4738101206', 'bizCommPop', 'width=750, height=700;');">[사업자정보확인]</a> </div>
 					<div class="footer-text">
 						<ol>
-							<li class="dib af-dn">주소 : 04075 서울특별시 마포구 토정로 11길 60(상수동)1F</li>
+							<li class="dib af-dn">주소 : 03970 서울특별시 마포구 성산동 258-22</li>
 							<li class="">대표번호 : 070-4267-7371</li>
 							<li class="af-dn">팩스번호 : 02-336-2920</li>
 						</ol>
@@ -62,7 +62,7 @@
 					<div class="footer-text">상호 : MANSION9<br/>대표 : 이영선</div>
 					<div class="footer-text">
 						<ol>
-							<li class="dib af-dn">주소 : 04075 서울특별시 마포구 토정로 11길 60(상수동)1F</li>
+							<li class="dib af-dn">주소 : 03970 서울특별시 마포구 성산동 258-22</li>
 							<li class="dib af-dn">대표번호 : 070-4267-7371</li>
 							<li class="af-dn">팩스번호 : 02-336-2920</li>
 							<li class="af-dn">이메일 : cafe24@mainsion9.co,kr</li>
