--- a/src/main/resources/templates/thymeleaf/footer.html
+++ b/src/main/resources/templates/thymeleaf/footer.html
@@ -16,9 +16,9 @@
 						<!-- <li><a href="javascript:fnModalAlert();">내부정보관리규정</a></li> -->
 					</ul>
 					<div class="footer-icon">
-						<a href="javascript:fnModalAlert();"><img src="resources/img/sns-f.jpg" /></a>
-						<a href="javascript:fnModalAlert();"><img src="resources/img/sns-t.jpg" /></a>
-						<a href="javascript:fnModalAlert();"><img src="resources/img/sns-i.jpg" /></a>
+						<!-- <a href="javascript:fnModalAlert();"><img src="resources/img/sns-f.jpg" /></a>
+						<a href="javascript:fnModalAlert();"><img src="resources/img/sns-t.jpg" /></a> -->
+						<a href="https://www.instagram.com/dealing_art/" target="_blank"><img src="resources/img/sns-i.jpg" /></a>
 					</div>
 				</div>
 				
