--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -14,7 +14,9 @@
 	<meta name="author" content="">
 	<title>딜링아트</title>
 <!-- 	<link rel="icon" href="http://localhost/resources/static/favicon.ico" /> -->
- 	<link rel="icon" href="favicon.ico">
+ 	
+ 	<link rel="icon" type="image/png" href="resources/img/favicon.png">
+ 	
 	<link type="text/css" rel="stylesheet" href="resources/css/bootstrap-select.min.css">
 	<link type="text/css" rel="stylesheet" href="resources/css/font.css" />
 	<link type="text/css" rel="stylesheet" href="resources/css/swiper-bundle.min.css" />
@@ -56,6 +58,9 @@
 	<script src="https://cdn.ckeditor.com/ckeditor5/34.0.0/decoupled-document/ckeditor.js"></script>
 	<link rel="stylesheet" href="resources/css/content-styles.css" type="text/css">
 	
+	
+    
+	
     <!-- chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script>
     
@@ -84,9 +89,13 @@
   
     <!-- google -->
     <meta name="google-site-verification" content="EKiW_Lm3Qw-DYnLT9qokEpZT2Sa8tSQuVWhVEvs4kPk" />
-    
+	    
 </head>
 <body>
+
+
+    
+    
 	<div class="head-wrap">
 	<!-- Session GET -->
 	<div th:text="${session.sMbrSqVal}" style="display:none"></div>
