--- a/src/main/resources/templates/thymeleaf/fo/deal/dealMod.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealMod.html
@@ -261,6 +261,7 @@
 						
 						<div class="bat-box2">
 							<button type="button" class="ba-btn1" data-toggle="modal" data-target="#myModal4" id="btn_dealReg"><span>경매 시작하기</span></button>
+							<button type="button" class="ba-btn2" id="btn_dealReg" onclick="bidSuspension()"><span>거래 중단하기</span></button>
 						</div>
 						
 					</div>
@@ -333,6 +334,11 @@
 
 
 <script th:inline="javascript">
+$(function() {
+	if(sMbrSqVal == null || sMbrSqVal == ""){
+		modalAlertShow("로그인 후 이용하실 수 있습니다.", "main");
+	}
+});
 $.datepicker.setDefaults({
 	dateFormat: 'yy.mm.dd',
 	prevText: '이전 달',
@@ -658,7 +664,11 @@ function dealReg(){
 	        processData : false,
 	        success: function(data) {
 	        	if(data != 0 || data != null || data != ""){
-	        		modalAlertShow("성공적으로 저장되었습니다.", "myDeal");
+	        		if(data > 0){
+	        			modalAlertShow("거래가 수정되었습니다.", "myDeal");
+	        		}else{
+	        			modalAlertShow("응찰 또는 판매가 되어서 수정이 불가합니다.", "myDeal");
+	        		}
 	        	}
 	        },
 	        error: function(error) {
@@ -667,6 +677,26 @@ function dealReg(){
 		});
 	}
 	
+}
+
+function bidSuspension(){
+	$.ajax({
+		type : "post",
+	    url : "/dealMod/bidSuspension",
+	    data : {
+	    	dealSq : result.deal.dealSq
+	    },
+	    success : function(data) {
+	    	if(data.result > 0){
+	       		modalAlertShow("거래가 중단 되었습니다.", "myDeal");
+        	}else{
+        		modalAlertShow("응찰 또는 판매가 되어서 수정이 불가합니다.", "myDeal");
+        	}
+	    },
+	    error : function(error) {
+	       alert("오류 발생" + error);
+	    }
+	});
 }
 
 function setTodayTime(){
