--- a/src/main/resources/templates/thymeleaf/myPageLeft.html
+++ b/src/main/resources/templates/thymeleaf/myPageLeft.html
@@ -83,7 +83,7 @@
 <script th:inline="javascript">
 $(function() {
 	if(sMbrSqVal == null || sMbrSqVal == ""){
-		modalAlertShow("잘못된 접근입니다. 메인페이지로 이동합니다.", "main");
+		modalAlertShow("로그인 후 이용하실 수 있습니다.", "main");
 	}
 });
 $(document).on("click", ".myWork", function(){
