--- a/src/main/resources/templates/thymeleaf/fo/about/serviceIntro.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/serviceIntro.html
@@ -25,7 +25,7 @@
 								<!-- /notice -->
 								<li><a href="/notice">공지사항</a></li>
 								<!-- /customerService -->
-								<li><a href="/customerService">고객센터</a></li>
+								<li><a href="/customerService">자주 묻는 질문</a></li>
 							</ul>
 						</div>
 					</div>
