--- a/src/main/resources/templates/thymeleaf/fo/about/customerService.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/customerService.html
@@ -20,7 +20,7 @@
 				<div class="con-wrap mobile-con-wrap">
 					<div class="con-left">
 						<div class="cont-title4">
-							<h3>고객센터</h3>
+							<h3>자주 묻는 질문</h3>
 						</div>
 					
 						<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
@@ -46,7 +46,7 @@
 								<div class="panel-heading" role="tab" id="heading3">
 									<h4 class="panel-title">
 										<a href="/customerService">
-											고객센터
+											자주 묻는 질문
 										</a>
 									</h4>
 								</div>
@@ -81,13 +81,34 @@
 							</div>
 							
 							<div class="cli-div">
-								<div class="cli-banner">
-									<h3>고객센터</h3>
-									<h4>02-0000-0000</h4>
-									<p>운영시간 : 09:00 ~ 18:00</p>
+								<div class="cli-banner"><br>
+<!-- 									<h3>고객센터</h3> -->
+									<h4>02-1533-3024</h4>
+									<p>운영시간 : 평일 오전 10:00 ~ 오후 19:00</p>
+									<p>점심시간 : 오후 12:30 ~ 오후 01:30</p>
+									<p>토 / 일 / 공휴일 휴무</p>
 									<p>이 메 일 : help@dealing-art.com</p>
 								</div>
 							</div>
+							
+							<style type="text/css">
+								 ol li {
+									  counter-increment: step-counter;
+									  margin-bottom: 10px;
+									  list-style-type: none;
+									}
+									
+									ol li::before {
+									  content: counter(step-counter);
+									  margin-right: 5px;
+									  font-size: 80%;
+									  background-color: rgb(0,200,200);
+									  color: white;
+									  font-weight: bold;
+									  padding: 3px 8px;
+									  border-radius: 15px;
+									}
+							</style>
 						
 							<div class="wrapper">
 								<div class="panel-group3" id="accordion" role="tablist" aria-multiselectable="true">
