--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWork_mod.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWork_mod.html
@@ -161,6 +161,26 @@
 										</div>
 									</td>
 								</tr>
+								<tr>
+									<th><span class="my-red">형태</span></th>
+									<td>
+										<input type="checkbox" id="z1" name="cc"/>
+										<label for="z1" class="wd-145"><span></span>평면</label>
+										<input type="checkbox" id="z2" name="cc"/>
+										<label for="z2" class="wd-145"><span></span>입체</label>
+									</td>
+								</tr>
+								<tr>
+									<th><span class="my-red">구분</span></th>
+									<td>
+										<input type="checkbox" id="z11" name="cc"/>
+										<label for="z11" class="wd-145"><span></span>회화</label>
+										<input type="checkbox" id="z22" name="cc"/>
+										<label for="z22" class="wd-145"><span></span>에디션</label>
+										<input type="checkbox" id="z33" name="cc"/>
+										<label for="z33" class="wd-145"><span></span>사진</label>
+									</td>
+								</tr>
 							</table>
 						</div>
 					</div>
