--- a/src/main/resources/templates/thymeleaf/fo/about/terms_2.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/terms_2.html
@@ -11,7 +11,7 @@
 		<div class="body-wrap terms-body">
 			
 			<div class="contents max-1500">
-				<div class="cont-title3" style="margin:0;">
+				<div class="cont-title3">
 					<h3>이용약관 및 개인정보 보호 작품명</h3>
 				</div>
 				
